--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>HTML EMAIL</title>
+    <title>FLEX BOX</title>
     <meta name="viewport" content="width=device-width, initial scale=1">
     <link rel="stylesheet" href="/css/styles.css">
     <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
   </head>
   <body>
+    <div class="wrapper">
+      <div class="box1">Box1</div>
+      <div class="box2">Box2</div>
+      <div class="box3">Box3</div>
+      <div class="box4">Box4</div>
+      <div class="box5">Box5</div>
+      <div class="box6">Box6</div>
+    </div>
   </body>
 </html>
