--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,25 @@
     <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
   </head>
   <body>
+    <div class="container">
     <div class="wrapper">
-      <div class="box1">Box1</div>
-      <div class="box2">Box2</div>
-      <div class="box3">Box3</div>
-      <div class="box4">Box4</div>
-      <div class="box5">Box5</div>
-      <div class="box6">Box6</div>
+      <div class="box">
+      </div>
+      <div class="box">1
+      </div>
+      <div class="box2">2
+      </div>
+      <div class="box">3
+      </div>
+      <div class="box3">4
+      </div>
+      <div class="box">5
+      </div>
+      <div class="box">6
+      </div>
+      </div>
+    </div>
+
     </div>
   </body>
 </html>
